Deploy preview for PR 40 🛫

--- a/pr-preview/pr-40/datasets.html
+++ b/pr-preview/pr-40/datasets.html
@@ -472,7 +472,7 @@ Table&nbsp;5.1: Functions for reading and writing datasets
 <p>We have already been working with partitioned data: the data in the PUMS person dataset has been partitioned based on the “year” and “location” columns.</p>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="images/excalidraw/datasets_pums.png" style="height:70.0%" class="figure-img"></p>
+<p><img src="images/excalidraw/datasets_pums.png" class="img-fluid figure-img"></p>
 <figcaption>Folder and file structure of a partitioned dataset</figcaption>
 </figure>
 </div>
