Deploy preview for PR 40 🛫

--- a/pr-preview/pr-40/datasets.html
+++ b/pr-preview/pr-40/datasets.html
@@ -472,7 +472,7 @@ Table&nbsp;5.1: Functions for reading and writing datasets
 <p>We have already been working with partitioned data: the data in the PUMS person dataset has been partitioned based on the “year” and “location” columns.</p>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="images/excalidraw/datasets_pums.png" style="height:50.0%" class="figure-img"></p>
+<p><img src="images/excalidraw/datasets_pums.png" class="img-fluid figure-img" style="width:70.0%"></p>
 <figcaption>Folder and file structure of a partitioned dataset</figcaption>
 </figure>
 </div>
@@ -1215,7 +1215,7 @@ AGEP: int8</code></pre>
 <div class="cell-output-display">
 <div data-pagedtable="false">
   <script data-pagedtable-source="" type="application/json">
-{"columns":[{"label":["year"],"name":[1],"type":["int"],"align":["right"]},{"label":["mean_age"],"name":[2],"type":["dbl"],"align":["right"]}],"data":[{"1":"2021","2":"9.562817"},{"1":"2018","2":"12.220912"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
+{"columns":[{"label":["year"],"name":[1],"type":["int"],"align":["right"]},{"label":["mean_age"],"name":[2],"type":["dbl"],"align":["right"]}],"data":[{"1":"2018","2":"12.220912"},{"1":"2021","2":"9.562817"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
   </script>
 </div>
 </div>
